--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
     "prettier:fix": "prettier --write src"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
+    "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-dialog": "^1.0.2",
+    "class-variance-authority": "^0.2.4",
     "next": "13.0.0",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
+    "react-toastify": "^9.0.8",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "18.11.8",
@@ -28,6 +36,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
   }
