--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-slider": "^1.1.1",
     "class-variance-authority": "^0.2.4",
+    "classnames": "^2.3.2",
+    "framer-motion": "^10.6.0",
     "next": "13.0.0",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
